--- a/main.html
+++ b/main.html
@@ -4,13 +4,130 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		.body{
+			background-color:lightgray
+		}
+		h6{
+			color:#3b99e0;
+		}
+		.summary{
+			border-top:3px solid blue;
+			background-color:#BEE0EC;
+		}
+	</style>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="body">
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<div class="container text-center">
+	<div class="block-heading">
+	<h1  style="color:#3b99e0">Shopping cart</h1>
+	<p>The customer is very important, the customer will be followed by the customer.Now, as an urn,I have no right to be in possession of property.</p>
+	</div>
+<div class="row bg-white">
+     <div class="col-lg-8">
+		 <div class="product">
+			 <div class="row align-items-center">
+				 <div class="col-3">
+					 <img class="img-fluid" src="https://tse4.mm.bing.net/th?id=OIF.DYQpraSu4JMiDcBY9L8vVQ&pid=Api&P=0&h=180" alt="product-1">
+				 </div>
+				 <div class="col-3">
+					 <h6>I am very sorry</h6>
+					 <ul class="list-style-none">
+						 <li>Display:5 inches</li>
+						 <li>RAM:4GB</li>
+						 <li>Memory:32GB</li>
+					 </ul>
+				 </div>
+				 <div class="col-2">
+					 <p>Quantity</p>
+					 <button>0</button>
+				 </div>
+				 <div class="col-1">
+					 $120
+				 </div>
+			 </div>
+				 
+		 </div>
 
+<div class="product">
+			 <div class="row align-items-center">
+				 <div class="col-3">
+					 <img class="img-fluid" src="https://tse4.mm.bing.net/th?id=OIF.DYQpraSu4JMiDcBY9L8vVQ&pid=Api&P=0&h=180" alt="product-1">
+				 </div>
+				 <div class="col-3">
+					 <h6>I am very sorry</h6>
+					 <ul class="list-style-none">
+						 <li>Display:5 inches</li>
+						 <li>RAM:4GB</li>
+						 <li>Memory:32GB</li>
+					 </ul>
+				 </div>
+				 <div class="col-2">
+					 <p>Quantity</p>
+					 <button>0</button>
+				 </div>
+				 <div class="col-1">
+					 $120
+				 </div>
+			 </div>
+				 
+		 </div>
+	 <div class="product">
+			 <div class="row align-items-center">
+				 <div class="col-3">
+					 <img class="img-fluid" src="https://tse4.mm.bing.net/th?id=OIF.DYQpraSu4JMiDcBY9L8vVQ&pid=Api&P=0&h=180" alt="product-1">
+				 </div>
+				 <div class="col-3">
+					 <h6>I am very sorry</h6>
+					 <ul class="list-style-none">
+						 <li>Display:5 inches</li>
+						 <li>RAM:4GB</li>
+						 <li>Memory:32GB</li>
+					 </ul>
+				 </div>
+				 <div class="col-2">
+					 <p>Quantity</p>
+					 <button>0</button>
+				 </div>
+				 <div class="col-1">
+					 $120
+				 </div>
+			 </div>
+
+	      <div class="col-lg-3 bt-2 bg-info">
+        <div class="summary">
+          <h5>Summary</h5>
+          <div class="border-bottom d-flex justify-content-between">
+            <span>Subtotal</span>
+            <span>$360</span>
+          </div>
+		<div class="border-bottom d-flex justify-content-between">
+			<span>Discount</span>
+			<span>$0</span>
+		</div>
+          <div class="border-bottom d-flex justify-content-between">
+            <span>Shipping</span>
+            <span>$0</span>
+          </div>
+          <div class="border-bottom d-flex justify-content-between">
+            <span>Total</span>
+            <strong>$360</strong>
+          </div>
+          <button type="button" class="btn btn-primary mt-3">Checkout</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
 </body>
 
 </html>
