--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
 </script>
 <div class="container text-center">
 	<div class="block-heading">
-	<h1  style="color:#3b99e0">Shopping cart</h1>
+	<h2  style="color:#3b99e0">Shopping cart</h2>
 	<p>The customer is very important, the customer will be followed by the customer.Now, as an urn,I have no right to be in possession of property.</p>
 	</div>
 <div class="row bg-white">
@@ -102,7 +102,7 @@
 				 </div>
 			 </div>
 
-	      <div class="col-lg-3 bt-2 bg-info">
+	      <div class="col-lg-4 bg-info">
         <div class="summary">
           <h5>Summary</h5>
           <div class="border-bottom d-flex justify-content-between">
