--- a/main.html
+++ b/main.html
@@ -121,8 +121,9 @@
             <span>Total</span>
             <strong>$360</strong>
           </div>
-          <button type="button" class="btn btn-primary mt-3">Checkout</button>
-        </div>
+<a href="/checkout" class="btn btn-primary btn-center mt-3">Checkout</a>
+
+		</div>
       </div>
     </div>
   </div>
